@@ -1344,6 +1344,7 @@ Please confirm that this is what you intend to do.',
 'lockdbsuccesstext' => 'The database has been locked.
 <br />Remember to remove the lock after your maintenance is complete.',
 'unlockdbsuccesstext' => 'The database has been unlocked.',
+'lockfilenotwritable' => 'The database lock file is not writable. To lock or unlock the database, this needs to be writable by the web server.',
 
 # Make sysop
 'makesysoptitle'	=> 'Make a user into a sysop',
